manifests/monitoring/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    istio-injection : enabled
