manifests/monitoring/base/istio-virtual-services.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
  - "kubernetes.patrick-cloud.com"
  gateways:
  - istio-system/patrick-cloud-gateway
  http:
  - name: grafana
    match:
    - uri:
        prefix: "/grafana/"
    rewrite:
       uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: grafana.monitoring.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  hosts:
  - "kubernetes.patrick-cloud.com"
  gateways:
  - istio-system/patrick-cloud-gateway
  http:
  - name: prometheus
    match:
    - uri:
        prefix: "/prometheus/"
    rewrite:
       uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: prometheus-server.monitoring.svc.cluster.local
